Se agrego dispatchEvent

--- a/apps/angularapp/src/app/grilla/grilla.component.html
+++ b/apps/angularapp/src/app/grilla/grilla.component.html
@@ -35,6 +35,9 @@
             (click)="abrirTarjeta(personaje)">
             <i class="fa fa-address-card"></i>
           </button>
+          <button class="btn btn-dark btn-sm" (click)="enviarMensaje(personaje)">
+            <i class="fa fa-exchange"></i>
+          </button>
         </td>
       </tr>
     </tbody>
